fixed some alignment stuff

--- a/css/style.scss
+++ b/css/style.scss
@@ -53,6 +53,7 @@ body{
             width: 300px;
             height: 500px;
             float: left;
+            background-color: white;
             @media screen and (max-width: 1200px){
                 width: 200px;
             }
@@ -92,7 +93,7 @@ body{
                 // width: 100%;
                 width: 300px;
                 margin: auto;
-                float: none;
+                // float: none;
                 padding-top: 110px;
                 // display: block;
             }
@@ -186,7 +187,7 @@ body{
         }
     }
     div.Me{
-        background-color: white;
+        background-color: rgb(96.5%, 96.5%, 96.5%);
     }
     img.post_pic{
         float: left;
